Created | Feat - JsonUtilService | Criar AbacatepayClient
Agora é possível criar um novo usuário a partir de um método no serviço de cliente no AbacatePayCliente. Agora tambem é possível trabalhar com json de forma rápida com a lib JSON no JsonUtilService

--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp -->
         <dependency>
-            <groupId>com.squareup.okhttp</groupId>
+            <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>2.7.5</version>
+            <version>4.9.3</version> <!-- Certifique-se de usar a versão mais recente disponível -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
 
         <!-- Jackson Databind -->
         <dependency>
@@ -76,12 +82,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <!-- Feign Dependencies -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
         <dependency>
