--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version> <!-- Use a versão Spring Boot que preferir -->
-        <relativePath/> <!-- Lookup parent from repository -->
+        <version>3.1.0</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.abacatepay</groupId>
     <artifactId>abacatepay-java-sdk</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>abacatepay-java-sdk</name>
@@ -33,9 +33,13 @@
             <email>joelfilho02812@gmail.com</email>
         </developer>
         <developer>
-            <id>@Erickson_Dias</id>
-            <name>Erickson A. C. Dias</name>
+            <id>EricksonLOOP</id>
+            <name>Erickson Dias</name>
             <email>ericksonagust45@gmail.com</email>
+            <url>https://github.com/EricksonLOOP</url>
+            <roles>
+                <role>Backend</role>
+            </roles>
         </developer>
     </developers>
 
