--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,15 @@
         </dependency>
 
         <!-- Lombok -->
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
+
+
 
         <dependency>
             <groupId>io.github.openfeign</groupId>
