--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
         <version>3.1.0</version>
         <relativePath/>
     </parent>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <groupId>com.abacatepay</groupId>
     <artifactId>abacatepay-java-sdk</artifactId>
